==> weston-embedded/uC-Modbus/Ports/Atmel/AVR32UC3A/mb_bsp.c <==
#include    <includes.h>
#define  AVR32UC3A_USART0_BASE_ADDR    ((CPU_INT32U)0xFFFF1400)
#define  AVR32UC3A_USART1_BASE_ADDR    ((CPU_INT32U)0xFFFF1800)
#define  AVR32UC3A_USART2_BASE_ADDR    ((CPU_INT32U)0xFFFF1C00)
#define  AVR32UC3A_USART3_BASE_ADDR    ((CPU_INT32U)0xFFFF2000)
#define  AVR32UC3A_TC_BASE_ADDR        ((CPU_INT32U)0xFFFF3800)
#define     BSP_USART0_RXD_PIN          AVR32_USART0_RXD_0_PIN
#define     BSP_USART0_RXD_FUNCTION     AVR32_USART0_RXD_0_FUNCTION
#define     BSP_USART0_TXD_PIN          AVR32_USART0_TXD_0_PIN
#define     BSP_USART0_TXD_FUNCTION     AVR32_USART0_TXD_0_FUNCTION
#define     BSP_USART0_RTS_PIN          AVR32_USART0_RTS_0_0_PIN
#define     BSP_USART0_RTS_FUNCTION     AVR32_USART0_RTS_0_0_FUNCTION
#define     BSP_USART1_RXD_PIN          AVR32_USART1_RXD_0_PIN
#define     BSP_USART1_RXD_FUNCTION     AVR32_USART1_RXD_0_FUNCTION
#define     BSP_USART1_TXD_PIN          AVR32_USART1_TXD_0_PIN
#define     BSP_USART1_TXD_FUNCTION     AVR32_USART1_TXD_0_FUNCTION
#define     BSP_USART1_RTS_PIN          AVR32_USART1_RTS_0_0_PIN
#define     BSP_USART1_RTS_FUNCTION     AVR32_USART1_RTS_0_0_FUNCTION
#define     BSP_USART2_RXD_PIN          AVR32_USART2_RXD_0_PIN
#define     BSP_USART2_RXD_FUNCTION     AVR32_USART2_RXD_0_FUNCTION
#define     BSP_USART2_TXD_PIN          AVR32_USART2_TXD_0_PIN
#define     BSP_USART2_TXD_FUNCTION     AVR32_USART2_TXD_0_FUNCTION
#define     BSP_USART2_RTS_PIN          AVR32_USART2_RTS_0_0_PIN

void  MB_CommPortCfg (MODBUS_CH  *pch,
                      CPU_INT08U  port_nbr,
                      CPU_INT32U  baud,
                      CPU_INT08U  bits,
                      CPU_INT08U  parity,
                      CPU_INT08U  stops)
{
              CPU_INT32U         dev_mclk_freq;
              CPU_INT32U         dev_usart_mr; 
              CPU_INT16U         dev_usart_brgr;    
    volatile  AVR32UC3A_USART   *p_dev_usart;


    if (pch != (MODBUS_CH *)0){
        pch->PortNbr        = port_nbr;                               /* Store configuration in channel              */
        pch->BaudRate       = baud;
        pch->Parity         = parity;
        pch->Bits           = bits;
        pch->Stops          = stops;        
        
                                                                      /* ------ USART CONFIGURATION SETUP ----------  */
        switch (parity) {                                             /* (1) Setup USART parity                       */
            case MODBUS_PARITY_ODD:
                 dev_usart_mr = AVR32UC3A_USART_MR_PAR_ODD;
                 break;
                 
            case MODBUS_PARITY_EVEN:            
                 dev_usart_mr = AVR32UC3A_USART_MR_PAR_EVEN;
                 break;

            case MODBUS_PARITY_NONE:
            default:
                 dev_usart_mr = AVR32UC3A_USART_MR_PAR_NONE;
                 break;
        }
        
        if (bits == 7) {                                              /* (2) Setup #bits                               */
            dev_usart_mr |= AVR32UC3A_USART_MR_CHRL_7;
        } else {
            dev_usart_mr |= AVR32UC3A_USART_MR_CHRL_8;
        }
            
        if (stops == 2) {                                             /* (3) Setup # stops bits                        */
            dev_usart_mr |= AVR32UC3A_USART_MR_NBSTOP_2;
        }
                                                                      /* (4) Setup USART baud rate                     */
        dev_mclk_freq  = BSP_PBA_ClkFreq();                            
        dev_usart_brgr = (CPU_INT16U)(dev_mclk_freq / baud / 16);
        
        switch (port_nbr) {                                           /* ----------- USART PORT SELECT --------------- */ 
            default:
            case MB_BSP_UART_00:
#if (MB_BSP_CFG_UART_00_MODE == MB_BSP_UART_RS232_MODE)
           	    p_dev_usart  = (AVR32UC3A_USART *)(AVR32UC3A_USART0_BASE_ADDR);
                BSP_GPIO_SetFnct(BSP_USART0_RXD_PIN, BSP_USART0_RXD_FUNCTION);
                BSP_GPIO_SetFnct(BSP_USART0_TXD_PIN, BSP_USART0_TXD_FUNCTION);
                BSP_INTC_IntReg(&MB_CommRxTxISR_0_Handler, AVR32_USART0_IRQ, 2);
#endif

#if (MB_BSP_CFG_UART_00_MODE == MB_BSP_UART_RS485_MODE)
                dev_usart_mr |= AVR32UC3A_USART_MR_MODE_RS485;
                p_dev_usart   = (AVR32UC3A_USART *)(AVR32UC3A_USART0_BASE_ADDR);
                BSP_GPIO_SetFnct(BSP_USART0_RXD_PIN, BSP_USART0_RXD_FUNCTION);
                BSP_GPIO_SetFnct(BSP_USART0_TXD_PIN, BSP_USART0_TXD_FUNCTION);
                BSP_GPIO_SetFnct(BSP_USART0_RTS_PIN, BSP_USART0_RTS_FUNCTION);
                BSP_INTC_IntReg(&MB_CommRxTxISR_0_Handler, AVR32_USART0_IRQ, 2);
#endif                 
                 break;
                 
            case MB_BSP_UART_01:
#if (MB_BSP_CFG_UART_01_MODE == MB_BSP_UART_RS232_MODE)
            	p_dev_usart  = (AVR32UC3A_USART *)(AVR32UC3A_USART1_BASE_ADDR);
            	BSP_GPIO_SetFnct(BSP_USART1_RXD_PIN, BSP_USART1_RXD_FUNCTION);
            	BSP_GPIO_SetFnct(BSP_USART1_TXD_PIN, BSP_USART1_TXD_FUNCTION);
            	BSP_INTC_IntReg(&MB_CommRxTxISR_1_Handler, AVR32_USART1_IRQ, 2);
#endif

#if (MB_BSP_CFG_UART_01_MODE == MB_BSP_UART_RS485_MODE)
                dev_usart_mr |= AVR32UC3A_USART_MR_MODE_RS485;
                p_dev_usart   = (AVR32UC3A_USART *)(AVR32UC3A_USART1_BASE_ADDR);
                BSP_GPIO_SetFnct(BSP_USART1_RXD_PIN, BSP_USART1_RXD_FUNCTION);
                BSP_GPIO_SetFnct(BSP_USART1_TXD_PIN, BSP_USART1_TXD_FUNCTION);
                BSP_GPIO_SetFnct(BSP_USART1_RTS_PIN, BSP_USART1_RTS_FUNCTION);
                BSP_INTC_IntReg(&MB_CommRxTxISR_1_Handler, AVR32_USART1_IRQ, 2);
#endif                                  
                 break;
                 
            case MB_BSP_UART_02:
#if (MB_BSP_CFG_UART_02_MODE == MB_BSP_UART_RS232_MODE)
                p_dev_usart  = (AVR32UC3A_USART *)(AVR32UC3A_USART2_BASE_ADDR);
            	BSP_GPIO_SetFnct(BSP_USART2_RXD_PIN, BSP_USART2_RXD_FUNCTION);
                BSP_GPIO_SetFnct(BSP_USART2_TXD_PIN, BSP_USART2_TXD_FUNCTION);
                BSP_INTC_IntReg(&MB_CommRxTxISR_2_Handler, AVR32_USART2_IRQ, 2);
#endif

#if (MB_BSP_CFG_UART_02_MODE == MB_BSP_UART_RS485_MODE)
                dev_usart_mr |= AVR32UC3A_USART_MR_MODE_RS485;
                p_dev_usart   = (AVR32UC3A_USART *)(AVR32UC3A_USART2_BASE_ADDR);
                BSP_GPIO_SetFnct(BSP_USART2_RXD_PIN, BSP_USART2_RXD_FUNCTION);
                BSP_GPIO_SetFnct(BSP_USART2_TXD_PIN, BSP_USART2_TXD_FUNCTION);
                BSP_GPIO_SetFnct(BSP_USART2_RTS_PIN, BSP_USART2_RTS_FUNCTION);
                BSP_INTC_IntReg(&MB_CommRxTxISR_2_Handler, AVR32_USART2_IRQ, 2);
#endif
                 break;
                 
            case MB_BSP_UART_03:
#if (MB_BSP_CFG_UART_03_MODE == MB_BSP_UART_RS232_MODE)
                p_dev_usart  = (AVR32UC3A_USART *)(AVR32UC3A_USART3_BASE_ADDR);
           	    BSP_GPIO_SetFnct(BSP_USART3_RXD_PIN, BSP_USART3_RXD_FUNCTION);
                BSP_GPIO_SetFnct(BSP_USART3_TXD_PIN, BSP_USART3_TXD_FUNCTION);
                BSP_INTC_IntReg(&MB_CommRxTxISR_3_Handler, AVR32_USART3_IRQ, 2);
#endif
#if (MB_BSP_CFG_UART_03_MODE == MB_BSP_UART_RS485_MODE)
                dev_usart_mr |= AVR32UC3A_USART_MR_MODE_RS485;
                p_dev_usart   = (AVR32UC3A_USART *)(AVR32UC3A_USART3_BASE_ADDR);
                BSP_GPIO_SetFnct(BSP_USART3_RXD_PIN, BSP_USART3_RXD_FUNCTION);
                BSP_GPIO_SetFnct(BSP_USART3_TXD_PIN, BSP_USART3_TXD_FUNCTION);
                BSP_GPIO_SetFnct(BSP_USART3_RTS_PIN, BSP_USART3_RTS_FUNCTION);
                BSP_INTC_IntReg(&MB_CommRxTxISR_3_Handler, AVR32_USART3_IRQ, 2);
#endif 
                 break;
}

        p_dev_usart->IDR     = AVR32UC3A_USART_IDR_DIS_ALL;

        p_dev_usart->CR      = AVR32UC3A_USART_CR_RSTSTA      /* Reset status bits, Tx and Rx                              */
                             | AVR32UC3A_USART_CR_RSTRX
                             | AVR32UC3A_USART_CR_RSTTX;

        p_dev_usart->CR      = AVR32UC3A_USART_CR_RXEN        /* Enable receiver and transmitter                           */
                             | AVR32UC3A_USART_CR_TXEN;
        
        p_dev_usart->IER     = AVR32UC3A_USART_CSR_RXRDY;     /* Enable Rx interrupts                                      */

        p_dev_usart->MR      = dev_usart_mr;                  /* Set the mode register                                     */
        p_dev_usart->BRGR    = dev_usart_brgr;                /* Set the baud rate generator register                      */
    }
}

void  MB_CommRxIntDis (MODBUS_CH  *pch)
{
    volatile  AVR32UC3A_USART  *p_dev_usart;  
    
    switch (pch->PortNbr) {
        default:
        case MB_BSP_UART_00:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART0_BASE_ADDR);;
             break;

        case MB_BSP_UART_01:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART1_BASE_ADDR);;
             break;
             
        case MB_BSP_UART_02:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART2_BASE_ADDR);;
             break;

        case MB_BSP_UART_03:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART3_BASE_ADDR);;                          
             break;
    }
    
    p_dev_usart->IDR = AVR32UC3A_USART_CSR_RXRDY;
}

void  MB_CommRxIntEn (MODBUS_CH  *pch)
{   
    volatile AVR32UC3A_USART  *p_dev_usart;  
    
    switch (pch->PortNbr) {
        default:
        case MB_BSP_UART_00:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART0_BASE_ADDR);;
             break;

        case MB_BSP_UART_01:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART1_BASE_ADDR);;
             break;
             
        case MB_BSP_UART_02:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART2_BASE_ADDR);;
             break;

        case MB_BSP_UART_03:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART3_BASE_ADDR);;                          
             break;
    }

    p_dev_usart->IER = AVR32UC3A_USART_CSR_RXRDY;
}

void  MB_CommRxTxISR_Handler (CPU_INT08U  port_nbr)
{
    volatile  AVR32UC3A_USART  *p_dev_usart;  
              MODBUS_CH          *pch;
              CPU_INT08U          ch;
              CPU_INT08U          rx_data;

    
    pch                = &MB_ChTbl[0];
    
    for (ch = 0; ch < MODBUS_CFG_MAX_CH; ch++) {       /* Find the channel assigned to this port       */
        if (pch->PortNbr == port_nbr) {
            ch = MODBUS_CFG_MAX_CH;
        } else {
            pch++;
        }
    }
    
    switch (port_nbr) {
        default:
        case MB_BSP_UART_00:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART0_BASE_ADDR);;
             break;

        case MB_BSP_UART_01:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART1_BASE_ADDR);;
             break;
             
        case MB_BSP_UART_02:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART2_BASE_ADDR);;
             break;

        case MB_BSP_UART_03:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART3_BASE_ADDR);;                          
             break;
    }

    if ((DEF_BIT_IS_SET(p_dev_usart->IMR, AVR32UC3A_USART_CSR_RXRDY)) && \
        (DEF_BIT_IS_SET(p_dev_usart->CSR, AVR32UC3A_USART_CSR_RXRDY))) {
    
        pch->RxCtr++;                                           /* Increment the Rx counter                                  */
        rx_data = (CPU_INT08U)(p_dev_usart->RHR & 0x00FF);
        MB_RxByte(pch, rx_data);
    }
    
    if ((DEF_BIT_IS_SET(p_dev_usart->IMR, AVR32UC3A_USART_CSR_TXRDY)) && \
        (DEF_BIT_IS_SET(p_dev_usart->CSR, AVR32UC3A_USART_CSR_TXRDY))) {
    
        pch->TxCtr++;
        MB_TxByte(pch);                                         /* Send next byte                                            */
    }
    
    if ((DEF_BIT_IS_SET(p_dev_usart->IMR, AVR32UC3A_USART_CSR_OVRE))) {   
        p_dev_usart->CR = AVR32UC3A_USART_CR_RSTSTA;           /* if an overrun occurs, reset the status bits                */
    }
}

void  MB_CommTx1 (MODBUS_CH  *pch,
                  CPU_INT08U  c)

{    
    volatile  AVR32UC3A_USART  *p_dev_usart;  

    
    switch (pch->PortNbr) {
        default:
        case MB_BSP_UART_00:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART0_BASE_ADDR);;
             break;

        case MB_BSP_UART_01:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART1_BASE_ADDR);;
             break;
             
        case MB_BSP_UART_02:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART2_BASE_ADDR);;
             break;

        case MB_BSP_UART_03:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART3_BASE_ADDR);;                          
             break;
    }

    p_dev_usart->THR = c;
}

void  MB_CommTxIntDis (MODBUS_CH  *pch)
{
    volatile  AVR32UC3A_USART  *p_dev_usart;  

    
    switch (pch->PortNbr) {
        default:
        case MB_BSP_UART_00:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART0_BASE_ADDR);;
             break;

        case MB_BSP_UART_01:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART1_BASE_ADDR);;
             break;
             
        case MB_BSP_UART_02:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART2_BASE_ADDR);;
             break;

        case MB_BSP_UART_03:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART3_BASE_ADDR);;                          
             break;
    }

    p_dev_usart->IDR = AVR32UC3A_USART_CSR_TXRDY;
}

void  MB_CommTxIntEn (MODBUS_CH  *pch)
{
    volatile  AVR32UC3A_USART  *p_dev_usart;  

    
    switch (pch->PortNbr) {
        default:
        case MB_BSP_UART_00:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART0_BASE_ADDR);;
             break;

        case MB_BSP_UART_01:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART1_BASE_ADDR);;
             break;
             
        case MB_BSP_UART_02:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART2_BASE_ADDR);;
             break;

        case MB_BSP_UART_03:
             p_dev_usart = (AVR32UC3A_USART *)(AVR32UC3A_USART3_BASE_ADDR);;                          
             break;
    }

    p_dev_usart->IER = AVR32UC3A_USART_CSR_TXRDY;
}

void  MB_RTU_TmrInit (void)
{
              CPU_INT32U       dev_mclk_freq;
    volatile  AVR32UC3A_TC   *p_dev_tc;


    dev_mclk_freq        = BSP_PBA_ClkFreq();
    MB_Tmr_ReloadCnts    = (dev_mclk_freq / 2) / MB_RTU_Freq;

#if   (MS_BSP_CFG_TMR == MB_BSP_TMR_0)
    p_dev_tc = (AVR32UC3A_TC *)(AVR32UC3A_TC_BASE_ADDR);
#endif
    
    p_dev_tc->CCR     = AVR32UC3A_TC_CCR_CLKDIS;              /* TCx Clk disable                                             */
    p_dev_tc->CMR     = AVR32UC3A_TC_CMR_CPCTRG_EN;           /* TCx Compare trigger enable                                  */
    p_dev_tc->RC      = MB_Tmr_ReloadCnts;                    /* TCx RC compare trigger value                                */

    
    p_dev_tc->CCR     = AVR32UC3A_TC_CCR_CLKEN;               /* TCx clk enable                                              */            
    p_dev_tc->CCR     = AVR32UC3A_TC_CCR_SWTRG;               /* TCx Software trigger                                        */ 
    p_dev_tc->IER     = AVR32UC3A_TC_IER_CPCS;                /* TCx RC compare interrupt enable                             */ 


    MB_RTU_TmrResetAll();                                     /* Reset all the RTU timers.                                   */
}

void  MB_RTU_TmrISR_Handler (void)
{
    volatile  AVR32UC3A_TC   *p_dev_tc;
    

#if   (MS_BSP_CFG_TMR == MB_BSP_TMR_0)
    p_dev_tc = (AVR32UC3A_TC *)(AVR32UC3A_TC_BASE_ADDR);    
#endif

    if (DEF_BIT_IS_SET(p_dev_tc->SR , AVR32UC3A_TC_SR_CPCS)) {
        p_dev_tc->RC     = MB_Tmr_ReloadCnts;                 /* Load the match value to the RC register                     */
    }

    MB_RTU_TmrCtr++;                                          /* Indicate that we had activities on this interrupt.          */
    MB_RTU_TmrUpdate();                                       /* Check for RTU timers that have expired                      */
}
